Migrate Playwright tests to Drama Finder library; update `ExampleViewIT` and documentation accordingly; bump plugin version to 2.2.0.